# indicium_lighthouse

./: .gitignore  README.md  feature_importances.csv  pyproject.toml  random_forest_model_v2_randomized_search.pkl
indicium_lighthouse/: EDA.py  EDA_2.py
indicium_lighthouse/EDA/: eda_bairro.py  eda_correlacao.py  eda_disponibilidade_noites.py  limpeza_dados.py  mapa_bairros_metro.py  utils.py
indicium_lighthouse/ML/: modelo.py  padrao_nomes.py  predict.py
