[tool.poetry]
name = "indicium_lighthouse"
version = "0.1.0"
description = ""
authors = ["Pedro Cunha <idk.pedroc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
scikit-optimize = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
